--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.21.1",
-    "express": "^4.21.1"
+    "cloudinary": "^2.5.1",
+    "express": "^4.21.1",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.7.9",
     "nodemon": "^3.1.7",
+    "prisma": "^5.21.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3",
-    "prisma": "^5.21.1"
+    "typescript": "^5.6.3"
   }
 }
